--- a/Gathering/Resource/LaunchScreen.storyboard
+++ b/Gathering/Resource/LaunchScreen.storyboard
@@ -47,6 +47,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="splash" width="180" height="181.33332824707031"/>
+        <image name="splash" width="341.33334350585938" height="341.33334350585938"/>
     </resources>
 </document>
